--- a/src/index.jade
+++ b/src/index.jade
@@ -5,3 +5,4 @@ html
 		link(href='/styles/main.css', type='text/css', rel='stylesheet')
 	body
 		h1 Hello, world!
+		script(src='/scripts/main.js')
