Compile all jade files in src folder

--- a/src/index.jade
+++ b/src/index.jade
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     title grunt-front
-    link(href='/styles/main.css', type='text/css', rel='stylesheet')
+    link(href='/styles/main.css', type='text/css')
   body
     h1 Hello, world!
     script(src='/scripts/main.js')
